<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mad2">


        <TextView
            android:id="@+id/smallltext16"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/right_left_bilateral_hip"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.61" />

        <TextView
            android:id="@+id/smallltext15"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/r_l"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.518" />

        <TextView
            android:id="@+id/smallltext14"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/neck_lump"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.438" />

        <TextView
            android:id="@+id/smallltext13"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/mammogram"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.364" />

        <TextView
            android:id="@+id/smallltext12"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/t_v_s"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.709" />

        <TextView
            android:id="@+id/smallltext11"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/eco"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62" />

        <TextView
            android:id="@+id/smallltext10"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/thyroid"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.518" />

        <TextView
            android:id="@+id/smallltext9"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/spine"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.438" />

        <TextView
            android:id="@+id/smallltext8"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/brain"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.364" />

        <TextView
            android:id="@+id/smallltext6"
            android:layout_width="114dp"
            android:layout_height="51dp"
            android:text="@string/right_left_bilateral"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.631" />

        <TextView
            android:id="@+id/smallltext3"
            android:layout_width="111dp"
            android:layout_height="55dp"
            android:text="@string/hepatobiliary_system"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.448" />

        <Button
            android:id="@+id/Scan"
            android:layout_width="130dp"
            android:layout_height="52dp"
            android:text="@string/take_a_scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.818" />

        <TextView
            android:id="@+id/top3"
            android:layout_width="409dp"
            android:layout_height="108dp"
            android:background="#B3D8F4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/top2"
            android:layout_width="409dp"
            android:layout_height="108dp"
            android:background="#B3D8F4"
            app:layout_constraintBottom_toBottomOf="@+id/top3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/navig"
            android:layout_width="410dp"
            android:layout_height="54dp"
            android:background="#7884C5"
            android:text="@string/home_channel_labortary_payments_portfolio"
            android:textColor="#131212"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.159" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="65dp"
            android:layout_height="61dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/top2"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top2"
            app:layout_constraintVertical_bias="0.04"
            app:srcCompat="@drawable/avatar"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="142dp"
            android:layout_height="103dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/finnalogo" />

        <ImageView
            android:id="@+id/fb"
            android:layout_width="59dp"
            android:layout_height="46dp"
            android:contentDescription="@string/fb"
            app:layout_constraintBottom_toBottomOf="@+id/top3"
            app:layout_constraintEnd_toEndOf="@+id/top3"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/facebooko" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="58dp"
            android:layout_height="44dp"
            android:contentDescription="@string/twit"
            app:layout_constraintBottom_toBottomOf="@+id/top3"
            app:layout_constraintEnd_toEndOf="@+id/top3"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/twittero" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="59dp"
        android:layout_height="47dp"
        android:contentDescription="@string/gmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        app:srcCompat="@drawable/lk" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="49dp"
            android:layout_height="39dp"
            android:contentDescription="@string/gmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.607"
            app:layout_constraintStart_toStartOf="@+id/top3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.953"
            app:srcCompat="@drawable/th" />

        <TextView
            android:id="@+id/smallltext"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/abdomen"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72" />

        <TextView
            android:id="@+id/smallltext7"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/scrotum"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.709" />

        <TextView
            android:id="@+id/smallltext5"
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:text="@string/pelvis"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.542" />

        <TextView
            android:id="@+id/smallltext2"
            android:layout_width="110dp"
            android:layout_height="33dp"
            android:text="@string/k_u_b"
            android:textColor="#191818"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361" />

        <TextView
            android:id="@+id/ScanNavi"
            android:layout_width="416dp"
            android:layout_height="59dp"
            android:background="#BAB8B8"
            android:text="@string/scans"
            android:textAlignment="center"
            android:textColor="#736E6E"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235" />

</androidx.constraintlayout.widget.ConstraintLayout>