<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mad4">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <TextView
            android:id="@+id/name7"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:text="@string/email_healthcare_gmail_com"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.843" />

        <TextView
            android:id="@+id/name6"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:text="@string/phone_01123456789"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="340dp"
            android:layout_height="51dp"
            android:text="@string/message"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.457" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:text="@string/phone_number"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <TextView
            android:id="@+id/top2"
            android:layout_width="409dp"
            android:layout_height="108dp"
            android:background="#B3D8F4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/top3"
            android:layout_width="409dp"
            android:layout_height="80dp"
            android:background="#B3D8F4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/mainlogo"
            android:layout_width="139dp"
            android:layout_height="111dp"
            android:contentDescription="@string/mainlogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/finnalogo" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="76dp"
            android:layout_height="73dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024"
            app:srcCompat="@drawable/avatar" />

        <ImageView
            android:id="@+id/fbw3"
            android:layout_width="51dp"
            android:layout_height="49dp"
            android:contentDescription="@string/fb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97"
            app:srcCompat="@drawable/facebooko" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="59dp"
            android:layout_height="50dp"
            android:layout_marginEnd="236dp"
            android:contentDescription="@string/gmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:srcCompat="@drawable/lk" />

        <ImageView
            android:id="@+id/mail"
            android:layout_width="57dp"
            android:layout_height="46dp"
            android:contentDescription="@string/mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/top3"
            app:layout_constraintHorizontal_bias="0.598"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97"
            app:srcCompat="@drawable/th" />

        <ImageView
            android:id="@+id/twit"
            android:layout_width="48dp"
            android:layout_height="39dp"
            android:contentDescription="@string/twit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.862"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956"
            app:srcCompat="@drawable/twittero" />

        <TextView
            android:id="@+id/nav"
            android:layout_width="409dp"
            android:layout_height="54dp"
            android:background="#DDD8D8"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="#706D6D"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163" />

        <TextView
            android:id="@+id/about"
            android:layout_width="409dp"
            android:layout_height="54dp"
            android:background="#DDD8D8"
            android:text="@string/about_us"
            android:textAlignment="center"
            android:textColor="#706D6D"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692" />

        <TextView
            android:id="@+id/name"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:text="@string/enter_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252" />

        <TextView
            android:id="@+id/email"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:text="@string/e_mail"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.317" />


    </androidx.constraintlayout.widget.ConstraintLayout>